Ensure FrameView scrollbars are updated when changing device emulation modes

Device emulation enables visual viewport scrollbar behavior and
we need to ensure the FrameView's scrollbars are removed when
we begin emulating, and restored when we stop emulating.

BUG=680894
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2695493003
Cr-Commit-Position: refs/heads/master@{#450093}

Former-commit-id: cda5197c6532a6ff59171f0bbcb5b34e0652b3db